[package]
name = "github-socket"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "*"
azure_storage_blobs = "*"
base64 = "*"
reqwest = { version = "*", features = ["json"] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
tokio = { version = "*", features = ["rt-multi-thread", "macros"] }
url = "*"
