[package]
name = "github-socket"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "*"
azure_storage_blobs = "*"
azure_core = "*"
base64 = "*"
bytes = "*"
futures-core = "*"
futures-util = "*"
reqwest = { version = "*", features = ["json"] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
tokio = { version = "*", features = ["rt-multi-thread", "macros"] }
tokio-util = "*"
url = "*"
uuid = "1.11.0"
